<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dasyel.dasyelwillems_pset1.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_body"
            android:src="@drawable/body"
            android:visibility="visible"
            android:contentDescription="@string/body" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_arms"
            android:src="@drawable/arms"
            android:visibility="invisible"
            android:contentDescription="@string/arms" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_ears"
            android:src="@drawable/ears"
            android:visibility="invisible"
            android:contentDescription="@string/ears" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_eyebrows"
            android:src="@drawable/eyebrows"
            android:visibility="invisible"
            android:contentDescription="@string/eyebrows" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_eyes"
            android:src="@drawable/eyes"
            android:visibility="invisible"
            android:contentDescription="@string/eyes" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_glasses"
            android:src="@drawable/glasses"
            android:visibility="invisible"
            android:contentDescription="@string/glasses" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_hat"
            android:src="@drawable/hat"
            android:visibility="invisible"
            android:contentDescription="@string/hat" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_mouth"
            android:src="@drawable/mouth"
            android:visibility="invisible"
            android:contentDescription="@string/mouth" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_mustache"
            android:src="@drawable/mustache"
            android:visibility="invisible"
            android:contentDescription="@string/mustache" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_nose"
            android:src="@drawable/nose"
            android:visibility="invisible"
            android:contentDescription="@string/nose" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_shoes"
            android:src="@drawable/shoes"
            android:visibility="invisible"
            android:contentDescription="@string/shoes" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arms"
                    android:id="@+id/checkBox_arms"
                    android:checked="false"
                    android:layout_above="@+id/checkBox_ears"
                    android:layout_alignStart="@+id/checkBox_ears" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ears"
                    android:id="@+id/checkBox_ears"
                    android:layout_above="@+id/checkBox_eyebrows"
                    android:layout_alignStart="@+id/checkBox_eyebrows"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eyebrows"
                    android:id="@+id/checkBox_eyebrows"
                    android:layout_centerVertical="true"
                    android:layout_alignStart="@+id/checkBox_eyes"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eyes"
                    android:id="@+id/checkBox_eyes"
                    android:layout_below="@+id/checkBox_eyebrows"
                    android:layout_alignStart="@+id/checkBox_glasses"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/glasses"
                    android:id="@+id/checkBox_glasses"
                    android:layout_below="@+id/checkBox_eyes"
                    android:layout_centerHorizontal="true"
                    android:checked="false" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hat"
                    android:id="@+id/checkBox_hat"
                    android:layout_above="@+id/checkBox_mouth"
                    android:layout_alignStart="@+id/checkBox_mouth"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mouth"
                    android:id="@+id/checkBox_mouth"
                    android:layout_above="@+id/checkBox_mustache"
                    android:layout_centerHorizontal="true"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mustache"
                    android:id="@+id/checkBox_mustache"
                    android:layout_centerVertical="true"
                    android:layout_alignStart="@+id/checkBox_mouth"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nose"
                    android:id="@+id/checkBox_nose"
                    android:layout_below="@+id/checkBox_mustache"
                    android:layout_alignStart="@+id/checkBox_mustache"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoes"
                    android:id="@+id/checkBox_shoes"
                    android:layout_below="@+id/checkBox_nose"
                    android:layout_alignStart="@+id/checkBox_nose"
                    android:checked="false" />
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
